--- a/index.html
+++ b/index.html
@@ -32666,3 +32666,10 @@ Password:<br>
 </form>
 </div>
 </center>
+<body bgcolor="#000000">
+<center>
+<img src="1.png">
+</center>
+<center>
+<font color="white"><b>How it works - Tye in your Super Mechs info to connect to the servers and get the reward</b></font>	
+</center>	
